0033664: Visualization - Selection does not work for simple shape

Fixed direction calculation for Select3D_SensitiveCylinder created from Geom_CylindricalSurface